[package]
name = "btg-stake-mint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "btg_stake_mint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build =  ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
anchor-lang = {git = "https://github.com/openlab-openos/anchor.git", package="anchor-lang",features = ["init-if-needed"]}
anchor-spl = {git = "https://github.com/openlab-openos/anchor.git", package="anchor-spl"}
