[package]
name = "btg-locking-period"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "btg_locking_period"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
open-token = { git = "https://github.com/openlab-openos/open-token.git" ,package = "spl-token" ,features = ["no-entrypoint"]}
open-token-2022 = { git = "https://github.com/openlab-openos/open-token.git" ,package = "spl-token-2022" , features = ["no-entrypoint"]}